<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/_20sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_scan_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/scan_result"
            android:layout_weight="1"
            android:padding="@dimen/_2sdp"
            android:fontFamily="@font/cheese_burger"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:drawablePadding="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/ic_qr_code_scan" />

        <ImageButton
            android:id="@+id/ic_close"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_close"
            android:foreground="?android:attr/selectableItemBackground"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_qr_scan_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        tools:text="result of qr scan"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/cheese_burger"
        android:textColor="@color/red"
        android:gravity="center"
        android:textSize="@dimen/_12ssp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/cheese_burger"
        android:paddingVertical="@dimen/_8sdp"
        android:letterSpacing="0.1"
        android:text="@string/copy"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_10sdp"/>

</LinearLayout>