<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.GenerateQRBarcodeFragment">

    <ImageButton
        android:id="@+id/ic_back"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/tv_generate_qr"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/tv_generate_qr"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_generate_qr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/generate_qr_code"
        android:fontFamily="@font/cheese_burger"
        android:textColor="@color/black"
        android:gravity="start|center"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/ic_back"
        app:layout_constraintTop_toTopOf="@id/guidelineTop" />

    <ImageView
        android:id="@+id/iv_qr_barcode"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bc_radius"
        app:layout_constraintTop_toBottomOf="@id/tv_generate_qr"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        android:contentDescription="@string/app_name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ic_save_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iv_qr_barcode"
        app:layout_constraintEnd_toEndOf="@id/iv_qr_barcode"
        app:layout_constraintStart_toStartOf="@id/iv_qr_barcode"
        app:layout_constraintTop_toTopOf="@+id/iv_qr_barcode"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_save" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_qr_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/enter_qr_value_or_link"
        app:hintTextColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/iv_qr_barcode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_qr_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/cheese_burger"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_generate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/generate_qr_code"
        android:textSize="@dimen/_12ssp"
        android:backgroundTint="@color/purple"
        app:cornerRadius="@dimen/_10sdp"
        android:letterSpacing="0.1"
        android:fontFamily="@font/cheese_burger"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_qr_value"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintVertical_bias="0.9"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>